--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -376,21 +376,33 @@ test_cm
 
 ## 3C - Ensemble Stacking
 ```{r}
+
 library(caretEnsemble)
 library(caret)
 
-folds <- createFolds(train_poi$poi, k = 5)
+TL=list(
+   m1=caretModelSpec(method='C5.0'),
+   m2=caretModelSpec(method='rpart'),
+   m3=caretModelSpec(method='ranger'))
 
-# summaryFunction so that we can use ROC as our metric for primary model selection later
-control <- trainControl(method='repeatedcv', number=5, repeats=3, index=folds, savePredictions='final', classProbs=TRUE, summaryFunction=twoClassSummary)
+folds = createFolds(train_poi$poi, k = 5)
+stack_control = trainControl(method='repeatedcv', number=5, repeats=3, index=folds, savePredictions='final', classProbs=TRUE, summaryFunction=twoClassSummary)
 
-algos <- c('rf','nnet')
+models = caretList(poi ~ ., data=train2, metric = 'ROC', trControl=stack_control, tuneList = TL)
 
-models <- caretList(train_poi$poi ~ ., data=cbind(train_features_df, train_poi$poi), trControl=control, metric='ROC', methodList=algos)
 
-models_perf <- resamples(models)
-summary(models_perf)
-modelCor(models_perf)
+results = resamples(models)
+summary(results)
+
+stack.glm = caretStack(models, method="glm", metric="Accuracy", trControl=stack_control)
+print(stack.glm)
+  
+stack_pred = predict(stack.glm, train_features_df)
+confusionMatrix(stack_pred,train_poi$poi, mode = 'everything')
+
+stack_pred_test = predict(stack.glm, test_features_df)
+confusionMatrix(stack_pred_test,test_poi$poi, mode = 'everything')
+
 ```
 
 ### 3D - Features Engineering
