--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -94,7 +94,7 @@ tf_idf_features <- tm_term_score(email_dtm, terms_in_General_Inquirer_categories
 
 ## Document-Topic Distributions as Features
 ```{r}
-#need weightTf matrix, not Tf-IDF
+# need weightTf matrix, not Tf-IDF
 dtm_control2 <- list(weighting = weightTf)
 email_dtm2 <- DocumentTermMatrix(email_corpus, control = dtm_control2)
 
@@ -108,9 +108,9 @@ email_dtm2 <- email_dtm2[apply(email_dtm2 , 1, sum) > 0,]
 
 heldout_index <- sample(email_dtm2$nrow*0.1)
 
-ks <- seq(5, 10, 1)
+ks <- seq(1, 5, 1)
 
-topic_models <- parSapply(cl = cl, ks, function(k, data) topicmodels::LDA(data, k = k, method = "Gibbs"), data = email_dtm2[-heldout_index,])
+topic_models <- parSapply(cl = cl, ks, function(k, data) topicmodels::LDA(data, k = k, method = "Gibbs", control = list(iter = 3000, seed = 5152)), data = email_dtm2[-heldout_index,])
 
 perplexities <- parSapply(cl = cl, topic_models, function(m, data) topicmodels::perplexity(m, data, use_theta = TRUE, estimate_theta = TRUE), data = email_dtm2[heldout_index,])
 
@@ -127,9 +127,30 @@ stopCluster(cl); print("Cluster stopped.")
 # insert serial backend, otherwise error in repetetive tasks
 registerDoSEQ()
 ```
-
-## Feature Construction Method 3
+## Topic-Term Visualization
 ```{r}
+lda <- topic_models[[optimal_idx]]
+
+lda_td <- tidy(lda)
+
+top_terms <- lda_td %>%
+  group_by(topic) %>%
+  top_n(5, beta) %>%
+  ungroup() %>%
+  arrange(topic, -beta)
+
+top_terms
+
+# visualization
+top_terms %>%
+  mutate(term = reorder(term, beta)) %>%
+  ggplot(aes(term, beta, fill = factor(topic))) +
+  geom_bar(alpha = 0.8, stat = "identity", show.legend = FALSE) +
+  facet_wrap(~ topic, scales = "free") +
+  coord_flip()
+
+# correlation between topics and POI/not
+
 
 ```
 
@@ -154,11 +175,12 @@ colnames(combined_features_df) <- paste("Main", colnames(combined_features_df), 
 combined_features_df <- cbind(combined_features_df, tf_idf_features, document_topic_dist)
 
 # remove features with near zero variance - Main_loan_advances and Main_director_fees
-combined_features_df <- select(combined_features_df, -Main_loan_advances, -Main_director_fees)
+combined_features_df <- select(combined_features_df, -Main_loan_advances, -Main_director_fees, -Main_restricted_stock_deferred)
 ```
 
 ## 3A - Split into training and validation and perform scaling
 ```{r}
+set.seed(5152)
 train_idx <- sample(nrow(combined_features_df) * 0.60)
 train_features_df <- combined_features_df[train_idx,]
 test_features_df <- combined_features_df[-train_idx,]
@@ -173,7 +195,7 @@ colnames(test_poi) <- c("poi")
 library(C50)
 
 # common control for all the baseline methods in 3B and 3C
-control <- trainControl(method = "cv", number = 5, sampling = "smote", classProbs = TRUE, summaryFunction = twoClassSummary)
+control <- trainControl(method = "repeatedcv", number = 5, repeats = 2, sampling = "smote", classProbs = TRUE, summaryFunction = twoClassSummary)
 
 # winnow - feature selection or not, trials - number of boosting iterations (more than 5 causing some warnings)
 grid <- expand.grid(.model = "tree", .winnow = c(TRUE,FALSE), .trials = 1:5) 
@@ -331,39 +353,44 @@ as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.734 auc
 
 ```
 
-## 3C - Random Forest SMOTE - improves Recall rate to 85.7%
+## 3C - Random Forest - improves recall to 0.934
 ```{r}
-rf_model <- train(poi ~ ., data = cbind(train_features_df,train_poi), method = "rf", trControl = trainControl(method = "cv", number = 5))
-
-test_cm <- table(predict(rf_model, test_features_df), test_poi$poi)
-confusionMatrix(test_cm, mode = "everything")
-
+# rf_model <- train(poi ~ ., data = cbind(train_features_df,train_poi), method = "rf", trControl = trainControl(method = "cv", number = 5))
+# 
+# test_cm <- table(predict(rf_model, test_features_df), test_poi$poi)
+# confusionMatrix(test_cm, mode = "everything")
+set.seed(5152)
 rf_model_smote <- train(poi ~ ., data = cbind(train_features_df,train_poi), 
-                        method = "rf", trControl = control, metric = "ROC")
+                        method = "rf", trControl = control, metric = "ROC",
+                        preProcess = c("scale", "center"))
+
 test_cm <- table(predict(rf_model_smote, test_features_df), test_poi$poi)
-confusionMatrix(test_cm, mode = "everything")
+confusionMatrix(test_cm, mode = "everything") # acc 0.8824, prec 0.9556, recall 0.9348
 
 # AUC
 test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.756 auc
+as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.7347 auc
 ```
 
 ## 3C - Random Forest using Ranger
 ```{r}
-ctrl <- trainControl(method = 'cv', number = 3,verboseIter = TRUE)
-ranger_mod <- train(x = train_features_df, 
+# ctrl <- trainControl(method = 'cv', number = 3, verboseIter = TRUE) -- using common control instead from C50
+
+ranger_model <- train(x = train_features_df, 
                 y = train_poi$poi, 
                 method = "ranger",
-                trControl = ctrl,
+                trControl = control,
+                metric = "ROC",
+                preProcess = c("scale", "center"),
                 tuneGrid = data.frame(mtry = floor(sqrt(dim(train_features_df)[2])),
                                       splitrule = "gini",
                                       min.node.size = 1))
 
-train_pred <- predict(ranger_mod, train_features_df)
+train_pred <- predict(ranger_model, train_features_df)
 train_cm = as.matrix(table(Actual=train_poi$po, Predicted=train_pred))
 train_cm
 
-test_pred <- predict(ranger_mod, test_features_df)
+test_pred <- predict(ranger_model, test_features_df)
 test_cm = as.matrix(table(Actual=test_poi$poi, Predicted=test_pred))
 test_cm
 ```
@@ -371,6 +398,27 @@ test_cm
 ## 3C - Boosting
 ```{r}
 # xgboost with caret train
+
+grid <- expand.grid(.nrounds=c(25, 50, 100, 200, 500),.eta=c(0.005, 0.01, 0.05, 0.1),.gamma=c(0,1),
+                     .max_depth=c(2,3,4,5),.colsample_bytree=c(0.6, 0.8, 1),
+                     .subsample=c(0.5, 0.75, 1),.min_child_weight=c(1, 2, 3))
+
+set.seed(5152)
+
+starttime <- Sys.time()
+model_xgb <- train(poi ~ ., data = cbind(train_features_df,train_poi), 
+                   method = "xgbTree", trControl = control, 
+                   tuneGrid = grid, metric = "ROC",
+                  preProcess = c("scale", "center"))
+endtime <-Sys.time()
+
+# ACCURACY, PRECISION and RECALL
+test_cm_xgb <- table(predict(rpart_model_smote, test_features_df), test_poi$poi)
+confusionMatrix(test_cm_xgb, mode = 'everything') # acc 0.8235, pre 0.951, recall 0.8478
+
+# AUC
+test_pred_xgb <- ROCR::prediction(as.numeric(predict(model_xgb, test_features_df)), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_xgb, "auc")@y.values) # 0.723 auc
 
 ```
 
@@ -408,14 +456,25 @@ confusionMatrix(stack_pred_test,test_poi$poi, mode = 'everything')
 ### 3D - Features Engineering
 
 ```{r}
-merged$to_poi_ratio = merged$from_poi_to_this_person / merged$to_messages
-merged$from_poi_ratio = merged$from_this_person_to_poi / merged$from_messages
-merged$shared_poi_ratio = merged$shared_receipt_with_poi / merged$to_messages
+combined_features_df2 <- combined_features_df
+
+# new features 
+combined_features_df2$to_poi_ratio = merged$from_poi_to_this_person / merged$to_messages
+combined_features_df2$from_poi_ratio = merged$from_this_person_to_poi / merged$from_messages
+combined_features_df2$shared_poi_ratio = merged$shared_receipt_with_poi / merged$to_messages
+
+# train test split again
+train_features_df2 <- combined_features_df2[train_idx,]
+test_features_df2 <- combined_features_df2[-train_idx,]
 ```
 
 Report how much those 3 new features improve the prediction performance based on top algorithms in 3B and 3C. You don’t need to re-run all algorithms in 3B and C, but you need to report the results of at least ONE best algorithm in 3B and ONE best algorithm in 3C to show the benefit of features engineering.
 
 ### 3B and 3C models again with engineered features
 ```{r}
+
+# 3B model - SVM accuracy before - 0.84
+
+# 3C model - stacked model before - 
 
 ```
