--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -351,6 +351,28 @@ cm$byClass["Recall"] # 0.869
 test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
 as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.734 auc
 
+#tuning with cost parameter
+model_svm_c <- train(factor(poi) ~., data = cbind(train_features_df, train_poi),
+                    metric = "ROC", method = "svmLinear", 
+                    trControl = control,cost=10)
+ 
+# training accuracy 0.833
+pred_svm_tr <- predict(model_svm_c, train_features_df)
+mean(pred_svm_tr == train_poi$poi)  
+
+# testing accuracy 0.75
+pred_svm <- predict(model_svm_c, test_features_df)
+mean(pred_svm == test_poi$poi)
+cm = confusionMatrix(pred_svm, test_poi$poi)
+
+cm$byClass["Precision"] # 0.84
+cm$byClass["Recall"] # 0.84
+
+# AUC
+test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.63 auc
+
+
 ```
 
 ## 3C - Random Forest - improves recall to 0.934
