--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -72,7 +72,7 @@ email_corpus <- VCorpus(VectorSource(merged$content))
 email_corpus <- tm_map(email_corpus, content_transformer(tolower))
 email_corpus <- tm_map(email_corpus, content_transformer(gsub), pattern="\\W",replace=" ") # remove emojis
 email_corpus <- tm_map(email_corpus, removeNumbers) # remove numbers
-email_corpus <- tm_map(email_corpus, removeWords, stopwords()) # remove stop words
+email_corpus <- tm_map(email_corpus, removeWords, stopwords("SMART")) # remove stop words
 email_corpus <- tm_map(email_corpus, removePunctuation) # remove punctuation
 email_corpus <- tm_map(email_corpus, stemDocument)
 conv2space <- content_transformer(function (x , pattern ) gsub(pattern, " ", x))
@@ -108,7 +108,7 @@ email_dtm2 <- email_dtm2[apply(email_dtm2 , 1, sum) > 0,]
 
 heldout_index <- sample(email_dtm2$nrow*0.1)
 
-ks <- seq(1, 5, 1)
+ks <- seq(2, 6, 1)
 
 topic_models <- parSapply(cl = cl, ks, function(k, data) topicmodels::LDA(data, k = k, method = "Gibbs", control = list(iter = 3000, seed = 5152)), data = email_dtm2[-heldout_index,])
 
@@ -149,11 +149,11 @@ top_terms %>%
   facet_wrap(~ topic, scales = "free") +
   coord_flip()
 
-# correlation between topics and POI/not
-
-
 ```
-
+## Feature from Python Word2Vec Clustering
+```{r}
+cluster_labels = read.csv("cluster_labels.csv", stringsAsFactors = FALSE, header = F)
+```
 ## Scale numerical variables
 ```{r}
 normalize <- function(x) { 
@@ -172,7 +172,7 @@ combined_features_df <- combined_features_df %>% mutate_if(is.numeric, normalize
 ## Combine Text Features to original feature list
 ```{r}
 colnames(combined_features_df) <- paste("Main", colnames(combined_features_df), sep = "_")
-combined_features_df <- cbind(combined_features_df, tf_idf_features, document_topic_dist)
+combined_features_df <- cbind(combined_features_df, tf_idf_features, document_topic_dist, cluster_labels)
 
 # remove features with near zero variance - Main_loan_advances and Main_director_fees
 combined_features_df <- select(combined_features_df, -Main_loan_advances, -Main_director_fees, -Main_restricted_stock_deferred)
@@ -181,9 +181,21 @@ combined_features_df <- select(combined_features_df, -Main_loan_advances, -Main_
 ## 3A - Split into training and validation and perform scaling
 ```{r}
 set.seed(5152)
-train_idx <- sample(nrow(combined_features_df) * 0.60)
+train_idx <- createDataPartition(merged$poi, p = 0.7, list = FALSE)
+# train_idx <- sample(nrow(combined_features_df) * 0.60)
+
+# to see if train and test will have balanced distribution of POI
+###################################
+train_merge <- merged[train_idx,]
+test_merge <- merged[-train_idx,]
+
+table(train_merge$poi)
+table(test_merge$poi)
+###################################
+
 train_features_df <- combined_features_df[train_idx,]
 test_features_df <- combined_features_df[-train_idx,]
+
 train_poi <- as.data.frame(merged[train_idx,"poi"])
 colnames(train_poi) <- c("poi")
 test_poi <- as.data.frame(merged[-train_idx,"poi"])
@@ -207,18 +219,18 @@ model_C50 <- train(poi ~ ., data = cbind(train_features_df, train_poi), method =
                    tuneGrid = grid)
 
 train_pred_C50 <- predict(model_C50, train_features_df) #predict
-mean(train_pred_C50 == train_poi$poi) # calculate accuracy 0.893
+mean(train_pred_C50 == train_poi$poi) # calculate accuracy 0.92
 
 test_pred_C50 <- predict(model_C50, test_features_df) #predict
-mean(test_pred_C50 == test_poi$poi) # calculate accuracy 0.8039
+mean(test_pred_C50 == test_poi$poi) # calculate accuracy 0.784
 
 # PRECISION and RECALL
 test_cm_C50 <- table(predict(model_C50, test_features_df), test_poi$poi)
-confusionMatrix(test_cm_C50, mode = 'everything') # acc 0.8039, pre 0.973, recall 0.8043
+confusionMatrix(test_cm_C50, mode = 'everything') # acc 0.784, pre 0.9487, recall 0.8043
 
 # AUC
 test_pred_C50 <- ROCR::prediction(as.numeric(predict(model_C50, test_features_df)), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_C50, "auc")@y.values) # 0.80 auc
+as.numeric(performance(test_pred_C50, "auc")@y.values) # 0.702 auc
 ```
 
 ## 3B - Baseline k-NN Model
@@ -246,7 +258,7 @@ cm$byClass["Recall"] # 0.869
 
 # AUC
 test_pred_knn <- ROCR::prediction(as.numeric(pred_knn), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_knn, "auc")@y.values) # 0.634 auc
+as.numeric(performance(test_pred_knn, "auc")@y.values) # 0.59 auc
 
 ```
 
@@ -316,7 +328,7 @@ confusionMatrix(nn_pred_test, test_poi$poi, mode = 'everything') # testing accur
 
 # AUC
 test_pred_nn <- ROCR::prediction(as.numeric(predict(model_nn, test_features_df)), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_nn, "auc")@y.values) # 0.61 auc
+as.numeric(performance(test_pred_nn, "auc")@y.values) # 0.602 auc
 
 ```
 
@@ -349,7 +361,7 @@ cm$byClass["Recall"] # 0.869
 
 # AUC
 test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.734 auc
+as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.602 auc
 
 #tuning with cost parameter
 model_svm_c <- train(factor(poi) ~., data = cbind(train_features_df, train_poi),
@@ -390,8 +402,8 @@ test_cm <- table(predict(rf_model_smote, test_features_df), test_poi$poi)
 confusionMatrix(test_cm, mode = "everything") # acc 0.8824, prec 0.9556, recall 0.9348
 
 # AUC
-test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.7347 auc
+test_pred_rf <- ROCR::prediction(as.numeric(predict(rf_model_smote, test_features_df)), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_rf, "auc")@y.values) # 0.7 auc
 ```
 
 ## 3C - Random Forest using Ranger
@@ -421,9 +433,10 @@ test_cm
 ```{r}
 # xgboost with caret train
 
-grid <- expand.grid(.nrounds=c(25, 50, 100, 200, 500),.eta=c(0.005, 0.01, 0.05, 0.1),.gamma=c(0,1),
+grid <- expand.grid(.nrounds=c(25, 50, 100, 200, 500),.eta=c(0.005, 0.01, 0.05, 0.1),.gamma=c(0.1,0.5, 1, 1.5),
                      .max_depth=c(2,3,4,5),.colsample_bytree=c(0.6, 0.8, 1),
-                     .subsample=c(0.5, 0.75, 1),.min_child_weight=c(1, 2, 3))
+                     .subsample=c(0.5, 0.75, 1),.min_child_weight=c(1, 2, 3, 5))
+
 
 set.seed(5152)
 
@@ -434,6 +447,11 @@ model_xgb <- train(poi ~ ., data = cbind(train_features_df,train_poi),
                   preProcess = c("scale", "center"))
 endtime <-Sys.time()
 
+print(endtime-starttime)
+
+print(varImp(model_xgb))
+plot(varImp(model_xgb))
+
 # ACCURACY, PRECISION and RECALL
 test_cm_xgb <- table(predict(rpart_model_smote, test_features_df), test_poi$poi)
 confusionMatrix(test_cm_xgb, mode = 'everything') # acc 0.8235, pre 0.951, recall 0.8478
@@ -441,6 +459,7 @@ confusionMatrix(test_cm_xgb, mode = 'everything') # acc 0.8235, pre 0.951, recal
 # AUC
 test_pred_xgb <- ROCR::prediction(as.numeric(predict(model_xgb, test_features_df)), as.numeric(test_poi$poi))
 as.numeric(performance(test_pred_xgb, "auc")@y.values) # 0.723 auc
+
 
 ```
 
@@ -455,7 +474,10 @@ TL=list(
    m2=caretModelSpec(method='rpart'),
    m3=caretModelSpec(method='ranger'))
 
+set.seed(5152)
 folds = createFolds(train_poi$poi, k = 5)
+
+set.seed(5152)
 stack_control = trainControl(method='repeatedcv', number=5, repeats=3, index=folds, savePredictions='final', classProbs=TRUE, summaryFunction=twoClassSummary)
 
 models = caretList(poi ~ ., data=train2, metric = 'ROC', trControl=stack_control, tuneList = TL)
@@ -464,7 +486,7 @@ models = caretList(poi ~ ., data=train2, metric = 'ROC', trControl=stack_control
 results = resamples(models)
 summary(results)
 
-stack.glm = caretStack(models, method="glm", metric="Accuracy", trControl=stack_control)
+stack.glm = caretStack(models, method="glm", metric="ROC", trControl=stack_control)
 print(stack.glm)
   
 stack_pred = predict(stack.glm, train_features_df)
@@ -475,7 +497,7 @@ confusionMatrix(stack_pred_test,test_poi$poi, mode = 'everything')
 
 ```
 
-### 3D - Features Engineering
+### 3D - Feature Engineering
 
 ```{r}
 combined_features_df2 <- combined_features_df
