--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -340,39 +340,17 @@ library(e1071)
 library(DMwR)
 
 set.seed(5152)
-# control <-  trainControl(method="cv", number = 5, sampling = 'smote')- using same control as above
-model_svm  <- train(factor(poi) ~., data = cbind(train_features_df, train_poi),
-                    metric = "ROC", method = "svmLinear", 
-                    trControl = control, preProcess = c("scale", "center"))
-
-# Variable(s) `' constant. Cannot scale data.???
-
-# training accuracy 0.96
-pred_svm_tr <- predict(model_svm, train_features_df)
-mean(pred_svm_tr == train_poi$poi)
-
-# testing accuracy 0.84
-pred_svm <- predict(model_svm, test_features_df)
-mean(pred_svm == test_poi$poi)
-cm = confusionMatrix(pred_svm, test_poi$poi)
-
-cm$byClass["Precision"] # 0.952
-cm$byClass["Recall"] # 0.869
-
-# AUC
-test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.602 auc
 
 #tuning with cost parameter
 model_svm_c <- train(factor(poi) ~., data = cbind(train_features_df, train_poi),
                     metric = "ROC", method = "svmLinear", 
-                    trControl = control,cost=10)
+                    trControl = control, tuneGrid = expand.grid(.C= c(1,2,0.5)))
  
-# training accuracy 0.833
+# training accuracy 0.94
 pred_svm_tr <- predict(model_svm_c, train_features_df)
 mean(pred_svm_tr == train_poi$poi)  
 
-# testing accuracy 0.75
+# testing accuracy 0.83
 pred_svm <- predict(model_svm_c, test_features_df)
 mean(pred_svm == test_poi$poi)
 cm = confusionMatrix(pred_svm, test_poi$poi)
@@ -382,7 +360,7 @@ cm$byClass["Recall"] # 0.84
 
 # AUC
 test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
-as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.63 auc
+as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.737 auc
 
 
 ```
@@ -516,9 +494,36 @@ Report how much those 3 new features improve the prediction performance based on
 
 ### 3B and 3C models again with engineered features
 ```{r}
+####################
+## 3B model - SVM ##
+####################
+# tuning with cost parameter
+set.seed(5152)
 
-# 3B model - SVM accuracy before - 0.84
+#tuning with cost parameter
+model_svm_c <- train(factor(poi) ~., data = cbind(train_features_df2, train_poi),
+                    metric = "ROC", method = "svmLinear", 
+                    trControl = control, tuneGrid = expand.grid(.C= c(1,2,0.5)))
+ 
+# training accuracy 0.955
+pred_svm_tr <- predict(model_svm_c, train_features_df2)
+mean(pred_svm_tr == train_poi$poi)  
 
-# 3C model - stacked model before - 
+# testing accuracy 0.837
+pred_svm <- predict(model_svm_c, test_features_df2)
+mean(pred_svm == test_poi$poi)
+cm = confusionMatrix(pred_svm, test_poi$poi)
+
+cm$byClass["Precision"] # 0.84
+cm$byClass["Recall"] # 0.84
+
+# AUC
+test_pred_svm <- ROCR::prediction(as.numeric(pred_svm), as.numeric(test_poi$poi))
+as.numeric(performance(test_pred_svm, "auc")@y.values) # 0.737 auc
+
+################
+## 3C model - ##
+################
+
 
 ```
