--- a/Final_Project.Rmd
+++ b/Final_Project.Rmd
@@ -7,7 +7,7 @@ library(parallel)
 library(doParallel)
 library(e1071)
 library(C50)
-library(DmWR)
+library(DMwR)
 library(caret)
 library(rpart)
 library(plyr)
@@ -153,11 +153,11 @@ top_terms %>%
 ```
 ## Feature from Python Doc2Vec Clustering (code to create this feature is in Python file)
 ```{r}
-doc2vec_cluster_labels = read.csv("cluster_labels.csv", stringsAsFactors = FALSE, header = F)
+doc2vec_cluster_labels = read.csv("labels.csv", stringsAsFactors = FALSE, header = F)
 ```
 ## Create Latent Semantic Analyis Model on TF-IDF Vectors and use SVD to reduce Dimension then Feed into Features for Modelling (Code to create this feature is in Python file)
 ```{r}
-lsa_features = as.matrix(read.csv("LSA_SVD.csv", stringsAsFactors = FALSE, header = F))
+lsa_features = as.matrix(read.csv("lsa_svd_10.csv", stringsAsFactors = FALSE, header = F))
 colnames(lsa_features) <- lapply(colnames(lsa_features), paste0, "lsa")
 ```
 ## Scale numerical variables
